    (lp#1503496)
  * enhancement: recompiling a MAKE-INSTANCE form with an initarg :INITARG
    CONSTANT where CONSTANT names a constant variable picks up the new value
    of CONSTANT in case it has been redefined. (lp#1644944)
  * optimization: faster TYPEP on undefined at compile-time types and upcoming
    class definitions. (lp#1082967)
  * bug fix: get-timezone returns corret DST on 64-bit Windows. (lp#1641058)
  * bug fix: cross reference information in fasls is no longer incompatible
    between different cores (lp#1648186)

changes in sbcl-1.3.12 relative to sbcl-1.3.11:
  * enhancement: on x86-64, compiled functions loaded from fasl files
    can not be moved, but can be freed, by GC. Additionally, COMPILE will
    produce immobile code if SB-C::*COMPILE-TO-MEMORY-SPACE* is set to
    :IMMOBILE. (Caution: the flag is experimental and subject to change.)
    The benefits are better physical separation of code from data,
    and potentially easier examination of live images by external tools.
  * enhancement: the docstring for SAVE-LISP-AND-DIE has been amended to
    say that the :ROOT-STRUCTURES parameter is not meaningless on gencgc,
    depending on the platform.
  * bug fix: calling a named function (e.g. a DEFUN) concurrently with
    redefining that same function could lead to execution of random bytes.
  * bug fix: yes-or-no-p accepts formatter functions (lp#1639490)
  * bug fix: better handling of exceptions on macOS.

changes in sbcl-1.3.11 relative to sbcl-1.3.10:
  * minor incompatible change: SB-EXT:*INTEXP-MAXIMUM-EXPONENT* is removed.
  * enhancement: TRACE ... :REPORT {TRACE,NIL} now work as advertised in the
    documentation string (based on patch by Patrick Stein)
  * enhancement: support unboxed signed-word structure slots on x86, x86-64
    and ARM64. (lp#377616)
  * optimization: faster logical bit-array operations on multidimensional
    arrays.
  * optimization: better GC performance in the presence of many threads.